<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Sony Mobile Communications Inc.
  All rights, including trade secret rights, reserved.
  -->

<!--
  ~ @file ${NAME}
  ~ @author Gabriel Gonçalves (gabriel.goncalves@venturus.org.br)
  ~ @created ${DATE}
  -->

<RelativeLayout
    android:id="@+id/background_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_bgcolor"
    android:paddingTop="@dimen/padding_status_bar"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/initial_img"
        android:layout_width="@dimen/center_image_width"
        android:layout_height="@dimen/center_image_height"
        android:layout_marginTop="@dimen/margin_top_image"
        android:layout_marginBottom="@dimen/margin_bottom_image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/initial_center_image"/>

    <TextView
        android:id="@+id/initial_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initial_img"
        android:textSize="@dimen/title_size"
        android:layout_marginBottom="@dimen/margin_title_bottom"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_default_15"
        android:text="@string/MV_INITIAL_TITLE"/>

    <TextView
        android:id="@+id/initial_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initial_title"
        android:textSize="@dimen/text_description_size"
        android:layout_marginLeft="@dimen/margin_default_15"
        android:layout_marginBottom="@dimen/margin_default_15"
        android:textColor="@color/white"
        android:text="@string/MV_INITIAL_TEXT"/>

    <TextView
        android:id="@+id/initial_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initial_description"
        android:textSize="@dimen/text_description_size"
        android:layout_marginLeft="@dimen/margin_default_15"
        android:textStyle="bold"
        android:textColor="@color/green_link"
        android:text="@string/MV_MOVE_LINK"/>
</RelativeLayout>
